fix: improve footer layout on mobile using 2x2 grid

--- a/docs/_sass/footer.scss
+++ b/docs/_sass/footer.scss
@@ -2,24 +2,26 @@ html {
   scroll-padding-bottom: var(--footer-height);
   scroll-behavior: smooth;
 }
+
 .footer {
   background: linear-gradient(to bottom,
-  #151515 5%,
-  #252525 20%,
-  #2f2f2f,
-  #303030,
-  #3d3d3d
-  );
+      #151515 5%,
+      #252525 20%,
+      #2f2f2f,
+      #303030,
+      #3d3d3d);
   display: flex;
   flex-direction: column;
   padding: min(2vh, 2vw);
   gap: min(2vh, 5vw);
 
   @media (max-width: 600px) {
-    height: calc(var(--footer-height) - 4.0rem);
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  @media (max: 1200px){
+  @media (max: 1200px) {
     height: var(--footer-height);
   }
 
@@ -81,24 +83,29 @@ html {
             width: 1.1rem;
             height: 1.1rem;
           }
+
           &:hover {
             filter: none;
 
-            & + span {
+            &+span {
               opacity: 1;
             }
           }
         }
+
         & img.github:hover {
           filter: brightness(0) invert(1);
           fill: white;
         }
+
         & svg:hover {
           fill: #0073cf;
         }
+
         & .twitter:hover {
           fill: #000;
         }
+
         & svg.youtube:hover {
           fill: #FF0000;
         }
@@ -106,4 +113,3 @@ html {
     }
   }
 }
-
